force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__BusinessObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BusinessObject__c</fullName>
    <description>The business object which provides the context for the filter</description>
    <inlineHelpText>The business object which provides the context for the filter</inlineHelpText>
    <label>Business Object</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_Config2__UseType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__AssetLineItem__c</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__ProductAttributeValue__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__RollupData__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__OrderLineItem__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__ExternalOrderSummaryItem__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__Incentive__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__Milestone2__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__MilestoneTemplate__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__SearchAttributeValue__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__ClassificationHierarchy__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>