force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__CountryScopeOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CountryScopeOper__c</fullName>
    <description>The country scope operator</description>
    <inlineHelpText>The country scope operator</inlineHelpText>
    <label>Country Scope Oper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>