force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__GroupBy__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupBy__c</fullName>
    <description>A comma separated list of API names of group by fields</description>
    <inlineHelpText>A comma separated list of API names of group by fields</inlineHelpText>
    <label>Group By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>