force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__GroupByMapTo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupByMapTo__c</fullName>
    <description>A comma separated list of API names of fields in the Rollup Data object the group by maps to. This allows group by values to be persisted along with the rollup data</description>
    <inlineHelpText>A comma separated list of API names of fields in the Rollup Data object the group by maps to. This allows group by values to be persisted along with the rollup data</inlineHelpText>
    <label>Group By Map To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>