force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__InclusionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionCriteria__c</fullName>
    <description>The inclusion criteria specification</description>
    <inlineHelpText>The inclusion criteria specification</inlineHelpText>
    <label>Inclusion Criteria</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>