force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__InclusionCriteriaFieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionCriteriaFieldName__c</fullName>
    <description>The filter inclusion criteria field</description>
    <inlineHelpText>The filter inclusion criteria field</inlineHelpText>
    <label>Inclusion Criteria Field (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>