force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__InclusionCriteriaFieldNames__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionCriteriaFieldNames__c</fullName>
    <description>The list of field names used in the inclusion criteria</description>
    <inlineHelpText>The list of field names used in the inclusion criteria</inlineHelpText>
    <label>Inclusion Criteria Field Names</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>