force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__InclusionCriteriaFieldValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionCriteriaFieldValue__c</fullName>
    <description>The filter inclusion criteria value</description>
    <inlineHelpText>The filter inclusion criteria value</inlineHelpText>
    <label>Inclusion Criteria Value (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>