force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupEffectiveDate__c</fullName>
    <description>The rollup effective date</description>
    <inlineHelpText>The rollup effective date</inlineHelpText>
    <label>Rollup Effective Date</label>
    <type>Date</type>
</CustomField>