force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupEndDate__c</fullName>
    <description>The rollup end date</description>
    <inlineHelpText>The rollup end date</inlineHelpText>
    <label>Rollup End Date</label>
    <type>Date</type>
</CustomField>