force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupEndDateSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupEndDateSource__c</fullName>
    <description>Indicates the source field in the rollup business object or a child object which determines the rollup end date</description>
    <inlineHelpText>Indicates the source field in the rollup business object or a child object which determines the rollup end date</inlineHelpText>
    <label>Rollup End Date Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>