force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupEndDateSourceObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupEndDateSourceObject__c</fullName>
    <description>Indicates the rollup business object or a child filter that contains the rollup end date source</description>
    <inlineHelpText>Indicates the rollup business object or a child filter that contains the rollup end date source</inlineHelpText>
    <label>Rollup End Date Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>