force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupEndDateSourceObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupEndDateSourceObjectType__c</fullName>
    <description>Indicates the type of the object that contains the rollup end date source</description>
    <inlineHelpText>Indicates the type of the object that contains the rollup end date source</inlineHelpText>
    <label>Rollup End Date Source Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>