force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupEndDateType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupEndDateType__c</fullName>
    <description>The rollup end date type</description>
    <inlineHelpText>The rollup end date type</inlineHelpText>
    <label>Rollup End Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constant</fullName>
                <default>true</default>
                <label>Constant</label>
            </value>
            <value>
                <fullName>Reference Value Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>