force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupExclusionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupExclusionCriteria__c</fullName>
    <description>The rollup exclusion filter criteria specification</description>
    <inlineHelpText>The rollup exclusion filter criteria specification</inlineHelpText>
    <label>Rollup Exclusion Criteria</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>