force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupExpirationDate__c</fullName>
    <description>The rollup expiration date</description>
    <inlineHelpText>The rollup expiration date</inlineHelpText>
    <label>Rollup Expiration Date</label>
    <type>Date</type>
</CustomField>