force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupField__c</fullName>
    <description>The rollup field</description>
    <inlineHelpText>The rollup field</inlineHelpText>
    <label>Rollup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>