force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupMetricType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupMetricType__c</fullName>
    <description>The rollup metric type.</description>
    <inlineHelpText>The rollup metric type.</inlineHelpText>
    <label>Rollup Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_Config2__RollupType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>