force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupRecurrenceType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupRecurrenceType__c</fullName>
    <description>The rollup recurrence type</description>
    <inlineHelpText>The rollup recurrence type</inlineHelpText>
    <label>Rollup Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
                <default>true</default>
                <label>One Time</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>