force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupStartDate__c</fullName>
    <description>The rollup start date</description>
    <inlineHelpText>The rollup start date</inlineHelpText>
    <label>Rollup Start Date</label>
    <type>Date</type>
</CustomField>