force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupStartDateOffsetType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupStartDateOffsetType__c</fullName>
    <description>The type of offset to apply to the rollup start date</description>
    <inlineHelpText>The type of offset to apply to the rollup start date</inlineHelpText>
    <label>Rollup Start Date Offset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offset (+) Days</fullName>
            </value>
            <value>
                <fullName>Offset (-) Days</fullName>
            </value>
            <value>
                <fullName>Offset (+) Months</fullName>
            </value>
            <value>
                <fullName>Offset (-) Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>