force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupStartDateOffsetValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupStartDateOffsetValue__c</fullName>
    <description>The offset value to apply to the rollup start date</description>
    <inlineHelpText>The offset value to apply to the rollup start date</inlineHelpText>
    <label>Rollup Start Date Offset Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>