force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupStartDateType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupStartDateType__c</fullName>
    <description>The rollup start date type</description>
    <inlineHelpText>The rollup start date type</inlineHelpText>
    <label>Rollup Start Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constant</fullName>
                <default>true</default>
                <label>Constant</label>
            </value>
            <value>
                <fullName>Reference Value Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>