force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__RollupType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupType__c</fullName>
    <description>The rollup type</description>
    <inlineHelpText>The rollup type</inlineHelpText>
    <label>Rollup Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
                <default>true</default>
                <label>SUM</label>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>