force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__UseType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UseType__c</fullName>
    <description>The filter use type</description>
    <inlineHelpText>The filter use type</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Child Filter</fullName>
            </value>
            <value>
                <fullName>Rollup</fullName>
            </value>
            <value>
                <fullName>Pre-Filter</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Category with Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>