force-app/main/default/objects/Apttus_Config2__SearchFilter__c/fields/Apttus_Config2__ValueObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ValueObject__c</fullName>
    <description>The object to map the value to</description>
    <inlineHelpText>The object to map the value to</inlineHelpText>
    <label>Value Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__ProductAttributeValue__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__Incentive__c</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__SearchAttributeValue__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>